<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <POU Name="Trim_Saw_Pre" Id="{eee4eff6-bf88-4f1c-93f2-342fd6996b21}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM Trim_Saw_Pre
VAR
	tonSawEntryPhotoEye				: TON;
	tonSawExitPhotoEye				: TON;
	tonFootSwitch					: TON;
	lrBoardThickness				: ARRAY[0..1] OF LREAL;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[tonSawEntryPhotoEye(IN := Inputs.i_xSawEntryPhotoEye, PT := T#50MS);
tonSawExitPhotoEye(IN := Inputs.i_xSawExitPhotoEye, PT := T#50MS);
tonFootSwitch(IN := Inputs.i_xFootSwitch, PT := T#50MS);

IF HMI.lrLaserScaling[0] <> 0 THEN
	lrBoardThickness[0] := Inputs.i_iBoardThickness[0] / HMI.lrLaserScaling[0] + HMI.lrLaserOffset[0];
	HMI.lrCurrentThickenss[0] := lrBoardThickness[0];
END_IF

IF HMI.lrLaserScaling[1] <> 0 THEN
	lrBoardThickness[1] := Inputs.i_iBoardThickness[1] / HMI.lrLaserScaling[1] + HMI.lrLaserOffset[1];
	HMI.lrCurrentThickenss[1] := lrBoardThickness[1];
END_IF

IF tonFootSwitch.Q THEN
	Outputs.q_xDeck3Stopper := TRUE;
ELSE
	Outputs.q_xDeck3Stopper := FALSE;
END_IF

IF HMI.xSlowFastButton THEN
	//Set conveyor speed to slow
ELSE
	//Set conveyor speed to fast
END_IF

//For Demo
//lrBoardThickness := HMI.lrCurrentThickenss;

IF tonSawEntryPhotoEye.Q THEN
	Inputs.i_xSawEntryPhotoEye := FALSE;
END_IF

IF tonSawExitPhotoEye.Q THEN
	Inputs.i_xSawExitPhotoEye := FALSE;
END_IF



]]></ST>
    </Implementation>
    <LineIds Name="Trim_Saw_Pre">
      <LineId Id="5" Count="0" />
      <LineId Id="8" Count="0" />
      <LineId Id="59" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="35" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="92" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="43" Count="1" />
      <LineId Id="93" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="61" Count="0" />
      <LineId Id="60" Count="0" />
      <LineId Id="62" Count="0" />
      <LineId Id="64" Count="1" />
      <LineId Id="63" Count="0" />
      <LineId Id="66" Count="2" />
      <LineId Id="70" Count="1" />
      <LineId Id="69" Count="0" />
      <LineId Id="12" Count="0" />
      <LineId Id="11" Count="0" />
      <LineId Id="13" Count="0" />
      <LineId Id="15" Count="0" />
      <LineId Id="14" Count="0" />
      <LineId Id="16" Count="1" />
      <LineId Id="20" Count="0" />
      <LineId Id="19" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="22" Count="0" />
      <LineId Id="57" Count="0" />
      <LineId Id="56" Count="0" />
      <LineId Id="34" Count="0" />
      <LineId Id="33" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>